{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 11,
  "lineage": "01f67ce2-8380-7e5a-9c56-ae6090edc859",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "data",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:vpc/vpc-0cddf8e49e581ad02",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-070d2e00c2f0d0b3f",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-7ebe8d04",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cddf8e49e581ad02",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02c27cc9fcbadc3f9",
            "owner_id": "350102312519",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Module": "networking",
              "Name": "terraform"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jumphost_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:350102312519:instance/i-0e315bd4ae00e023b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e315bd4ae00e023b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-071013cd911755088",
            "private_dns": "ip-10-0-1-139.ec2.internal",
            "private_ip": "10.0.1.139",
            "public_ip": "44.201.17.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0403504de5c15bb8f",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b7adbd1bb31bccf",
            "tags": {
              "Environment": "terraform-local",
              "Module": "compute",
              "Name": "jumphost-vm"
            },
            "tags_all": {
              "Environment": "terraform-local",
              "Module": "compute",
              "Name": "jumphost-vm"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0812a50d4628acdae",
              "sg-0ebb9947cb1050c0c"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.public_access",
            "module.ec2.aws_security_group.ssh_access",
            "module.ec2.data.aws_vpc.terraform",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:350102312519:instance/i-09f83bcd8c8f9b836",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f83bcd8c8f9b836",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ce2df773e30894bc",
            "private_dns": "ip-10-0-2-59.ec2.internal",
            "private_ip": "10.0.2.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c3680734772faf4c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-024a659b1090ceb82",
            "tags": {
              "Environment": "terraform-local",
              "Module": "compute",
              "Name": "private-vm"
            },
            "tags_all": {
              "Environment": "terraform-local",
              "Module": "compute",
              "Name": "private-vm"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0812a50d4628acdae",
              "sg-0ebb9947cb1050c0c"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.public_access",
            "module.ec2.aws_security_group.ssh_access",
            "module.ec2.data.aws_vpc.terraform",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:security-group/sg-0ebb9947cb1050c0c",
            "description": "Allow access to internet Outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All ips and protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebb9947cb1050c0c",
            "ingress": [],
            "name": "allow-internet-outbound-sg",
            "name_prefix": "",
            "owner_id": "350102312519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "terraform-local",
              "Module": "compute",
              "Name": "allow-internet-outbound-sg"
            },
            "tags_all": {
              "Environment": "terraform-local",
              "Module": "compute",
              "Name": "allow-internet-outbound-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cddf8e49e581ad02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.data.aws_vpc.terraform",
            "module.vpc.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-access-default-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:security-group/sg-0c3dc8465f72e19fd",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c3dc8465f72e19fd",
            "ingress": [],
            "name": "terraform-20211215112808415000000001",
            "name_prefix": "terraform-",
            "owner_id": "350102312519",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-cf1284b2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:security-group/sg-0812a50d4628acdae",
            "description": "Allow access to ssh from Jumphost and VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0812a50d4628acdae",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "SSH from Jumphost and VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-sg",
            "name_prefix": "",
            "owner_id": "350102312519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "terraform-local",
              "Module": "compute",
              "Name": "ssh-access-sg"
            },
            "tags_all": {
              "Environment": "terraform-local",
              "Module": "compute",
              "Name": "ssh-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cddf8e49e581ad02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.data.aws_vpc.terraform",
            "module.vpc.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:subnet/subnet-024a659b1090ceb82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-024a659b1090ceb82",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350102312519",
            "tags": {
              "Environment": "dev",
              "Module": "networking",
              "Name": "terraform-private-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Module": "networking",
              "Name": "terraform-private-subnet"
            },
            "vpc_id": "vpc-0cddf8e49e581ad02"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:subnet/subnet-01b7adbd1bb31bccf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01b7adbd1bb31bccf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "350102312519",
            "tags": {
              "Environment": "dev",
              "Module": "networking",
              "Name": "terraform-public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Module": "networking",
              "Name": "terraform-public-subnet"
            },
            "vpc_id": "vpc-0cddf8e49e581ad02"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:vpc/vpc-0cddf8e49e581ad02",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-034bbb314c4d622d7",
            "default_route_table_id": "rtb-02c27cc9fcbadc3f9",
            "default_security_group_id": "sg-0b6897a4761762003",
            "dhcp_options_id": "dopt-7ebe8d04",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cddf8e49e581ad02",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02c27cc9fcbadc3f9",
            "owner_id": "350102312519",
            "tags": {
              "Environment": "dev",
              "Module": "networking",
              "Name": "terraform"
            },
            "tags_all": {
              "Environment": "dev",
              "Module": "networking",
              "Name": "terraform"
            }
          }
        }
      ]
    }
  ]
}